# ipyflow

./: .all-contributorsrc  .coveragerc  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTORS.md  DEVELOPMENT.md  HISTORY.rst  LICENSE.txt  MANIFEST.in  Makefile  README.md  blueprint.json  dependency_safety.py  package.json  project.py  project_02172020.py  project_02252020.py  project_04062020.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements.txt.in  runtests.sh  runtime.txt  setup.cfg  setup.py  test_project.py  test_runner.py  tracing-line-by-line.ipynb  versioneer.py
binder/: environment.yml  postBuild
core/: .gitattributes  HISTORY.rst  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  versioneer.py
core/ipyflow/: __init__.py  __main__.py  _version.py  comm_manager.py  config.py  flow.py  frontend.py  install.py  ipython_utils.py  line_magics.py  models.py  run_mode.py  safety.py  singletons.py  types.py  version.py
core/ipyflow/analysis/: live_refs.py  resolved_symbols.py  slicing.py  symbol_edges.py  symbol_ref.py  utils.py
core/ipyflow/annotations/: __init__.py  annotations.py  builtins.pyi  compiler.py  io.pyi  ipyflow.pyi  matplotlib.pyplot.pyi  random.pyi  sklearn.pyi  time.pyi
core/ipyflow/api/: __init__.py  cells.py  lift.py
core/ipyflow/data_model/: __init__.py  annotation_utils.py  cell.py  code_cell.py  data_symbol.py  namespace.py  scope.py  sizing.py  statement.py  symbol.py  timestamp.py  update_protocol.py
core/ipyflow/data_model/utils/: annotation_utils.py  dep_ctx_utils.py  deps.py  update_protocol.py
core/ipyflow/experimental/: dag.py
core/ipyflow/kernel/: __init__.py  __main__.py  install.py  kernel.py  patched_nest_asyncio.py
core/ipyflow/memoization/: __init__.py
core/ipyflow/patches/: __init__.py  cloudpickle_patch.py  pyspark_patch.py
core/ipyflow/pyccolo/: __init__.py
core/ipyflow/resources/jupyter_notebook_config.d/: ipyflow.json
core/ipyflow/resources/jupyter_server_config.d/: ipyflow.json
core/ipyflow/resources/kernel/: kernel.json
core/ipyflow/resources/labextension/: install.json  package.json
core/ipyflow/resources/labextension/static/: 486.2fc92621e54c7868a10e.js  549.780992a9df8954c5e5b9.js  549.adc38281a7078aee2976.js  549.ed004867fd8da7c3781e.js  568.07788094c43b6600dd88.js  568.1da3bbecde662e29f438.js  568.2d90d076ec35d7d4acdd.js  568.52b18f4874c6697e8adf.js  568.5cac53e8188b10dc84ea.js  568.8961450c8526b815494f.js  568.8a16d3e7079e0d6f8d52.js  568.921b8ad216796a8ee1fa.js  568.ac6794f817bedb983f86.js  568.c0729eeb1972343b8ab5.js  568.dc3ca5542b500118f24a.js  568.fbb58d8bdee0a95d8f68.js  remoteEntry.00f4010247a438c37b5d.js  remoteEntry.0572f04a98dccc1a67e0.js  remoteEntry.07bf98769549703b866d.js  remoteEntry.1537f3d9b283fabe0099.js  remoteEntry.272f550da36686ddfa72.js  remoteEntry.2a5e9d1edd79cf4b5e45.js  remoteEntry.36e2231fda8b0ad29c57.js  remoteEntry.3bc9c41e356190f8b79e.js  remoteEntry.3c0213ade7fe6bf71d56.js  remoteEntry.5ba3f386c14e71b87c00.js  remoteEntry.61379efc4e5cd871a1da.js  remoteEntry.6594ca7c19e7b1354435.js  remoteEntry.74c929b75c3e2e7fc1b1.js  remoteEntry.7b9028cbcc7a3a6e108b.js  remoteEntry.7eb4b9195f05db9d053d.js  remoteEntry.7ebbfb6756ae555cc63b.js  remoteEntry.7fd0a5f8d41b90609cbb.js  remoteEntry.805e14cee3e51835980c.js  remoteEntry.82a8addd34140a732683.js  remoteEntry.949fd2c0c03952fad9f0.js  remoteEntry.963472b32258bd6c7cdb.js  remoteEntry.9b3ea95a5746f2f3a9a8.js  remoteEntry.a653cc9a95bf7418c303.js  remoteEntry.a78ec3b08b5375c7603c.js  (+14 more)
core/ipyflow/resources/nbextension/: index.js  index.js.map
core/ipyflow/shell/: __init__.py  interactiveshell.py  interactiveshellembed.py  terminalinteractiveshell.py  utils.py  zmqshell.py
core/ipyflow/slicing/: context.py  mixin.py
core/ipyflow/tracing/: external_call_handler.py  flow_ast_rewriter.py  interrupt_tracer.py  ipyflow_tracer.py  mutation_event.py  mutation_special_cases.py  output_recorder.py  safety_ast_rewriter.py  symbol_resolver.py  trace_stmt.py  uninstrument.py  utils.py  watchpoint.py
core/ipyflow/tracing/external_calls/: __init__.py  base_handlers.py  cloudpickle_patch.py  list_handlers.py
core/ipyflow/utils/: __init__.py  ast_utils.py  ipython_utils.py  magic_parser.py  misc_utils.py  mixins.py
core/test/: __init__.py  fakelib.py  fakelib.pyi  test_annotations.py  test_api.py  test_ast_rewriting.py  test_attribute_symbols.py  test_cell_dag.py  test_cell_functions.py  test_dataflow_dsl.py  test_dynamic_slicing.py  test_frontend_checker.py  test_line_magics.py  test_lineno_stmt_map.py  test_liveness_analysis.py  test_memoization.py  test_nested_symbols.py  test_no_prints.py  test_reactive_atom_detection.py  test_reactivity.py  test_refcount.py  test_slice_features.py  test_stability.py  test_staleness_propagation.py  test_trace_events.py  test_typechecking.py  test_updated_symbols.py  utils.py
frontend/: _version.py
ipyflow_full_stub/: _version.py
markdown-blueprints/: CONTRIBUTORS.md  README.md  badges.md
nbsafety/: __init__.py  _version.py  ast_utils.py  data_cell.py  data_symbol.py  extra_builtins.py  frontend.py  install.py  ipython_utils.py  legacy_update_protocol.py  line_magics.py  precheck.py  project_02252020.py  project_04062020.py  run_mode.py  safety.py  scope.py  singletons.py  test_project.py  tracing.py  types.py  unexpected.py  updates.py  variable.py  version.py
notebooks/: demo.ipynb  ray-demo-2020-01-29.ipynb  shreya.ipynb
runtime-jupyter-safety/: trace-example.py
safe_kernel/: __init__.py  install.py  kernel.py
scripts/: blacken.sh  build-version.py  build.sh  bump-version.py  bump.sh  deploy-all.sh  deploy.sh  eslint.sh  extlink.sh  nbext.sh  runtests.sh  test_runner.py  typecheck.sh  verify-git-version.sh
src/: index.ts
style/: index.css
test/: __init__.py  fake.py  fakelib.py  test_annotations.py  test_assignment_edges.py  test_ast_rewriting.py  test_attribute_symbols.py  test_call_point_integration.py  test_cell_dag.py  test_dep_integration.py  test_dynamic_slicing.py  test_frontend_checker.py  utils.py  (+17 more)
(+122 files in other folders)
