# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py install' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = core/ipyflow/_version.py
versionfile_build = core/ipyflow/_version.py
tag_prefix =
parentdir_prefix = nbsafety-

[metadata]
description_file = README.md

[bdist_wheel]
universal = 1

