# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py install' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = frontend/_version.py
versionfile_build = frontend/_version.py
tag_prefix =
parentdir_prefix = ipyflow-

[metadata]
description_file = README.md

[bdist_wheel]
universal = 1

