[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.30.0",
    "setuptools-git-versioning",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools-git-versioning]
enabled = true

[tool.black]
line-length = 88
target-version = ['py39']
extend-exclude = '(^/versioneer|_version)\.py'

[tool.pytest.ini_options]
markers = ['integration: mark a test as an integration test.']
filterwarnings = [
    'ignore::DeprecationWarning',
    'ignore::pytest.PytestAssertRewriteWarning',
]

[tool.coverage.run]
source = ['ipyflow']
omit = [
    'ipyflow/__init__.py',
    'ipyflow/install.py',
    'ipyflow/experimental/*',
    'ipyflow/kernel/*',
    'ipyflow/types.py',
    'ipyflow/version.py',
    'ipyflow/_version.py',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover *$',
    '^ *if TYPE_CHECKING:',
    '^ *except',
    '^ *raise',
]
