# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py install' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = ipyflow/_version.py
versionfile_build = ipyflow/_version.py
tag_prefix =
parentdir_prefix = ipyflow-

[metadata]
name = ipyflow-core
history = file: ../HISTORY.rst
description = Backend package for ipyflow's dataflow functionality
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/smacke/nbsafety-project/nbsafety
author = Stephen Macke
author_email = stephen.macke@gmail.com
license = BSD-3-Clause
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
platforms = any
python_requires = >= 3.6
install_requires =
    astunparse
    black
    ipykernel
    ipython<8.0.0
    nest_asyncio
    pyccolo>=0.0.25
    traitlets

[options.packages.find]
exclude = test

[bdist_wheel]
universal = 1

[options.extras_require]
typecheck =
    mypy
test =
    flake8
    flake8-no-implicit-concat
    hypothesis
    ipytest==0.9.1
    mypy
    numpy
    pandas
    pytest
    pytest-cov
    types-dataclasses
dev =
    build
    twine
    versioneer
    %(test)s

[flake8]
max-line-length = 100
max-complexity = 15
exclude = .git,__pycache__,old,build,dist,versioneer.py,ipyflow/_version.py

[mypy]
no_strict_optional = True
ignore_missing_imports = True

[mypy-ipyflow._version]
ignore_errors = True

