# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'python versioneer.py setup' after changing this section, and
# commit the resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = ipyflow/_version.py
versionfile_build = ipyflow/_version.py
tag_prefix =
parentdir_prefix = ipyflow_core-

[metadata]
name = ipyflow-core
history = file: ../HISTORY.rst
description = Backend package for ipyflow's dataflow functionality
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/ipyflow/ipyflow
author = Stephen Macke
author_email = stephen.macke@gmail.com
license = BSD-3-Clause
license_files = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
zip_safe = False
packages = find:
platforms = any
python_requires = >= 3.6
install_requires =
    astunparse
    black
    contextvars; python_version < '3.7'
    ipykernel
    ipython; python_version >= '3.9'
    ipython < 8.13; python_version >= '3.8' and python_version < '3.9'
    ipython <= 7.16; python_version < '3.8'
    ipywidgets
    nest_asyncio
    pyccolo==0.0.75
    traitlets

[options.packages.find]
exclude = test

[bdist_wheel]
universal = 1

[options.extras_require]
typecheck =
    mypy
test =
    black
    hypothesis
    isort
    mypy
    numpy
    pandas
    pytest
    pytest-cov
    ruff
    types-dataclasses
    types-contextvars
dev =
    build
    pycln
    twine
    versioneer
    %(test)s

[mypy]
ignore_missing_imports = True

[mypy-ipyflow._version]
ignore_errors = True

[mypy-ipyflow.annotations.*]
ignore_errors = True

